feat: add blog posts section

--- a/styles/index.css
+++ b/styles/index.css
@@ -15,4 +15,13 @@
   line-height: 1.15;
 }
 
+::selection {
+  @apply bg-primary-500;
+  @apply text-white;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 @tailwind utilities;
